# rest1

./: .gitignore  README.md
hask-rest1/: LICENSE  README.md  hask-rest1.cabal  stack.yaml
hask-rest1/app/: Client.hs  Server.hs
hask-rest1/src/: API.hs
